update test config

--- a/build.gradle
+++ b/build.gradle
@@ -90,7 +90,9 @@ project(':UiTest'){
             parallel 'instances'
             threadCount 2
         }
-        systemProperty "screen",System.getProperty("screen")
+        if(System.getProperty("screen") != null){
+            systemProperty "screen",System.getProperty("screen")
+        }
     }
 
 
